force-app/main/default/objects/Projection__c/Projection__c.object-meta.xml
<CustomObject>
    <description>Revenue projection record. Private sharing — only the owning AE and users above in the role hierarchy can view without an explicit share. Fields added by the budget-planning slice.</description>
    <label>Projection</label>
    <nameField>
        <displayFormat>PROJ-{0000000}</displayFormat>
        <label>Projection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>