force-app/main/default/objects/Projection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>