force-app/main/default/objects/Projection__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>