force-app/main/default/objects/Projection__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <description>System-managed unique key: AccountId|CategoryId|RevenueType|Year|Month. Populated by trigger. Used as ExternalId for Excel-paste upserts.</description>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>