force-app/main/default/objects/Projection__c/fields/Pitch_Project__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Project__c</fullName>
    <label>Pitch Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pitch Projections</relationshipLabel>
    <relationshipName>Pitch_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>