force-app/main/default/objects/Projection__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Working</fullName><default>true</default><label>Working</label></value>
            <value><fullName>Pitched</fullName><default>false</default><label>Pitched</label></value>
            <value><fullName>Committed</fullName><default>false</default><label>Committed</label></value>
            <value><fullName>Won</fullName><default>false</default><label>Won</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>